# it_crystal

./: .gitignore  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/adapters/driven/infra/dynamo/: dynamo_equipment_repository.py  dynamo_update_service.py
src/adapters/driven/infra/interfaces/: equipment_repository.py
src/adapters/driver/AWS_Lambda/handlers/: create_equipment_handler.py  delete_equipment_handler.py  get_equipment_handler.py  list_equipment_handler.py  update_equipment_handler.py
src/adapters/driver/AWS_Lambda/schemas/: create_asset_schema.py  delete_asset_schema.py  get_asset_schema.py  list_asset_schema.py  update_asset_schema.py
src/adapters/driver/data_mappers/: equipment_aggregate_data_mapper.py
src/core/domain/aggregate/: asset_aggregate.py
src/core/domain/entities/: equipment_entity.py  user_profile_entity.py
src/core/domain/value_object/: address_value_object.py  physical_state_value_object.py
src/core/helpers/enums/: equipment_type_enum.py
src/core/use_cases/: equipment_use_case.py
tests/adapters/driver/AWS_Lambda/Handlers/: test_create_asset_handler.py  test_handler.py
tests/core/use_cases/: test_asset_use_case.py
